# pacreset

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp
